--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <h1 class="tulisan">
         HAPPY BIRTHDAY <br>
-        NI LUH PARAMITHA PARVATIS DEVI SUMANTRA
+        NI LUH PARAMITHA PARVATI DEVI SUMANTRA
     </h1>
 
     <a id="nextButton" href="flower.html"> NEXT </a>
